--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -33,7 +33,7 @@
         </div>
     
         <label for="image">Imagem do Produto:</label>
-        <input type="file" id="image" name="image" accept="image/*" required>
+        <input type="file" id="image" name="image" accept="image/*">
     
         <button type="submit" class="edit-button">Adicionar Produto</button>
     </form>
