--- a/app/templates/base-admin.html
+++ b/app/templates/base-admin.html
@@ -40,7 +40,7 @@
         <div class="header-buttons">
             <!-- Profile button with user icon -->
             <button class="profile">
-                <i class="fa fa-user" style="font-size:24px"></i>
+                <i class="fa fa-user" style="font-size:24px"></i> Admin User
             </button>
             <div class="profile-dropdown-unlogged" id="profile-dropdown-unlogged">
                 <a href="/">
@@ -48,7 +48,7 @@
                         <i class="fa fa-sign-out" style="margin-right: 8px;"></i>Logout
                     </button>
                 </a>
-            </div>
+            </div>            
         </div>
     </header>
 
