--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,9 +46,9 @@
                 <i class="fa fa-shopping-cart" style="font-size:24px"></i>
             </button>
             <div class="cart-dropdown">
-                <p>Conteúdo do carrinho</p>
-                <a href="/cart">
-                    <button class="cart-page-button">Go to cart</button>
+                <p>Você não está Logado</p>
+                <a href="/login">
+                    <button class="cart-page-button">Login</button>
                 </a>
             </div>
             <!-- Profile button with user icon -->
@@ -111,7 +111,7 @@
     <script src="{{ url_for('static', filename='scripts/search.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/auth.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/darkmode.js') }}"></script>
-
+    <script src="{{ url_for('static', filename='scripts/product.js') }}"></script>
 
 </body>
 </html>
