--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Catálogo de Produtos{% endblock %}
+{% block title %}Checkout{% endblock %}
 
 {% block content %}
+
 
 {% endblock %}
