--- a/app/templates/base-logged.html
+++ b/app/templates/base-logged.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/cart.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/product.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/catalogue.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/checkout.css') }}">
+
     <!-- Include Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
