--- a/app/static/styles/checkout.css
+++ b/app/static/styles/checkout.css
@@ -64,3 +64,16 @@
 .btn-submit:hover {
     background: #e60085;
 }
+
+#pix-qr-code {
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin: 1rem auto;
+}
+
+#boleto-code {
+    font-family: monospace;
+    font-size: 1.2rem;
+    text-align: center;
+}
