--- a/app/templates/base-logged.html
+++ b/app/templates/base-logged.html
@@ -107,6 +107,7 @@
     <script src="{{ url_for('static', filename='scripts/search.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/auth.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/darkmode.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/checkout.js') }}"></script>
 
 
 </body>
